Adiciona mensagem de erro ao se registrar

--- a/frontend/Pulse/src/app/components/register/register.component.html
+++ b/frontend/Pulse/src/app/components/register/register.component.html
@@ -12,4 +12,5 @@
       <br>
       <button type="submit">Registrar</button>
     </form>
+    <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
 </div>
