Cria a navbar na tela de perfil e melhora rotas

--- a/frontend/Pulse/src/app/components/templates/navbar/navbar.component.html
+++ b/frontend/Pulse/src/app/components/templates/navbar/navbar.component.html
@@ -1,10 +1,10 @@
 <mat-toolbar>
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-      <mat-icon>menu</mat-icon>
+    <button mat-icon-button class="example-icon" aria-label="Logout icon-button" (click)="navigateToDestination()">
+      <mat-icon>home</mat-icon>
     </button>
-    <span>My App</span>
+    <span>Pulse</span>
     <span class="example-spacer"></span>
-    <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon" (click)="navigateToPerfil()">
-      <mat-icon>favorite</mat-icon>
+    <button mat-icon-button class="example-icon favorite-icon" aria-label="Logout icon-button" (click)="logout()">
+      <mat-icon>logout</mat-icon>
     </button>
 </mat-toolbar>
