--- a/frontend/Pulse/src/app/components/perfil/perfil.component.html
+++ b/frontend/Pulse/src/app/components/perfil/perfil.component.html
@@ -6,4 +6,9 @@
       <p><strong>Nome:</strong> {{ userName }}</p>
       <p><strong>Email:</strong> {{ userEmail }}</p>
     </div>
-  </div>
+</div>
+
+<div *ngFor="let post of posts">
+  <app-feed-post [post]="post"></app-feed-post>
+</div>
+  
