--- a/frontend/Pulse/src/app/components/templates/feed-post/feed-post.component.html
+++ b/frontend/Pulse/src/app/components/templates/feed-post/feed-post.component.html
@@ -4,7 +4,7 @@
     </mat-card-header>
     <mat-card-content>
       <p> {{ post.content }}</p>
-      <p> {{ post.createdAt }}</p>
+      <p> {{ post.createdAt | date: 'dd/MM/yyyy HH:mm' }}</p>
       <mat-divider></mat-divider>
     </mat-card-content>
     <mat-card-actions>
