--- a/frontend/Pulse/src/app/components/login/login.component.html
+++ b/frontend/Pulse/src/app/components/login/login.component.html
@@ -1,13 +1,15 @@
-<div>
-    <h2>Login</h2>
-    <form (ngSubmit)="loginUser()">
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" [(ngModel)]="email" required>
-      <br>
-      <label for="password">Senha:</label>
-      <input type="password" id="password" name="password" [(ngModel)]="password" required>
-      <br>
-      <button type="submit">Entrar</button>
-    </form>
+<div class="container">
+  <div class="content">
+    <mat-form-field class="example-full-width">
+      <mat-label>Email</mat-label>
+      <input matInput placeholder="Email" name="email" [(ngModel)]="email" required>
+    </mat-form-field>
+
+    <mat-form-field class="example-full-width">
+      <mat-label>Senha</mat-label>
+      <input matInput placeholder="Senha" type="password" name="password" [(ngModel)]="password" required>
+    </mat-form-field>
+
+    <button mat-raised-button type="submit" (click)="loginUser()">Logar</button>
   </div>
-  
+</div>
