--- a/frontend/Pulse/src/app/components/register/register.component.html
+++ b/frontend/Pulse/src/app/components/register/register.component.html
@@ -1,16 +1,20 @@
-<div>
-    <h2>Registro de Usuário</h2>
-    <form (ngSubmit)="registerUser()">
-      <label for="name">Nome:</label>
-      <input type="text" id="name" name="name" [(ngModel)]="user.name" required>
-      <br>
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" [(ngModel)]="user.email" required>
-      <br>
-      <label for="password">Senha:</label>
-      <input type="password" id="password" name="password" [(ngModel)]="user.password" required>
-      <br>
-      <button type="submit">Registrar</button>
-    </form>
-    <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
+<div class="container">
+  <div class="content">
+    <mat-form-field class="example-full-width">
+      <mat-label>Nome</mat-label>
+      <input matInput placeholder="Nome" name="name" [(ngModel)]="user.name" required>
+    </mat-form-field>
+
+    <mat-form-field class="example-full-width">
+      <mat-label>Email</mat-label>
+      <input matInput placeholder="Email" name="email" [(ngModel)]="user.email" required>
+    </mat-form-field>
+
+    <mat-form-field class="example-full-width">
+      <mat-label>Senha</mat-label>
+      <input matInput placeholder="Senha" type="password" name="password" [(ngModel)]="user.password" required>
+    </mat-form-field>
+
+    <button mat-raised-button type="submit" (click)="registerUser()">Registrar</button>
+  </div>
 </div>
