--- a/frontend/Pulse/src/app/components/templates/feed-post/feed-post.component.html
+++ b/frontend/Pulse/src/app/components/templates/feed-post/feed-post.component.html
@@ -5,8 +5,11 @@
     <mat-card-content>
       <p> {{ post.content }}</p>
       <p> {{ post.createdAt | date: 'dd/MM/yyyy HH:mm' }}</p>
-      <mat-divider></mat-divider>
+    <mat-divider></mat-divider>
     </mat-card-content>
+    <ng-container *ngIf="post.userId === userId">
+      <button mat-button color="warn" (click)="deletePost(post)">Excluir</button>
+    </ng-container>
     <mat-card-actions>
       <button mat-icon-button (click)="likePost(post)">
         <mat-icon>thumb_up</mat-icon>
