--- a/frontend/Pulse/src/app/components/main-page/main-page.component.html
+++ b/frontend/Pulse/src/app/components/main-page/main-page.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
 <app-new-post></app-new-post>
 <div *ngFor="let post of posts">
-  <app-feed-post [post]="post"></app-feed-post>
+  <app-feed-post [post]="post" (deletePost)="onDeletePost($event)"></app-feed-post>
 </div>
