--- a/frontend/Pulse/src/app/components/templates/feed-post/feed-post.component.html
+++ b/frontend/Pulse/src/app/components/templates/feed-post/feed-post.component.html
@@ -8,7 +8,7 @@
     <mat-divider></mat-divider>
     </mat-card-content>
     <ng-container *ngIf="post.userId === userId">
-      <button mat-button color="warn" (click)="deletePost(post)">Excluir</button>
+      <button mat-button color="warn" (click)="onDeletePost(post.id)">Excluir</button>
     </ng-container>
     <mat-card-actions>
       <button mat-icon-button (click)="likePost(post)">
