--- a/frontend/Pulse/src/app/components/perfil/perfil.component.html
+++ b/frontend/Pulse/src/app/components/perfil/perfil.component.html
@@ -5,6 +5,7 @@
     <div class="profile-info">
       <p><strong>Nome:</strong> {{ userName }}</p>
       <p><strong>Email:</strong> {{ userEmail }}</p>
+      <p><strong>Sobre mim:</strong> {{ aboutMe }}</p>
     </div>
 </div>
 
