--- a/frontend/Pulse/src/app/components/register/register.component.html
+++ b/frontend/Pulse/src/app/components/register/register.component.html
@@ -16,5 +16,6 @@
     </mat-form-field>
 
     <button mat-raised-button type="submit" (click)="registerUser()">Registrar</button>
+    <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
   </div>
 </div>
