Cria navegação entre login e register

--- a/frontend/Pulse/src/app/components/login/login.component.html
+++ b/frontend/Pulse/src/app/components/login/login.component.html
@@ -11,5 +11,6 @@
     </mat-form-field>
 
     <button mat-raised-button type="submit" (click)="loginUser()">Logar</button>
+    <button mat-raised-button color="primary" (click)="goToRegister()">Registrar</button>
   </div>
 </div>
