--- a/frontend/Pulse/src/app/components/templates/new-post/new-post.component.css
+++ b/frontend/Pulse/src/app/components/templates/new-post/new-post.component.css
@@ -1,3 +1,18 @@
 button {
-    background-color: aliceblue;
+    background-color: rgb(193, 224, 252);
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+    padding: 0 40px;
+}
+
+.custom-textarea-card {
+    width: 100%;
+    max-width: 90%;
+    border: 1px solid #e0e0e0;
+    border-radius: 8px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
 }
