--- a/frontend/Pulse/src/app/components/templates/new-post/new-post.component.html
+++ b/frontend/Pulse/src/app/components/templates/new-post/new-post.component.html
@@ -1,4 +1,5 @@
-<mat-card>
+<div class="container">
+  <mat-card class="custom-textarea-card">
     <mat-card-content>
       <textarea matInput placeholder="Digite seu post" [(ngModel)]="newPostContent"></textarea>
       <mat-divider></mat-divider>
@@ -6,5 +7,5 @@
     <mat-card-actions>
       <button mat-button (click)="postNewPost()">Postar</button>
     </mat-card-actions>
-</mat-card>
-  
+  </mat-card>
+</div>
