--- a/frontend/Pulse/src/app/components/templates/new-post/new-post.component.html
+++ b/frontend/Pulse/src/app/components/templates/new-post/new-post.component.html
@@ -5,7 +5,7 @@
       <mat-divider></mat-divider>
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button (click)="postNewPost()">Postar</button>
+      <button mat-button (click)="createNewPost()">Postar</button>
     </mat-card-actions>
   </mat-card>
 </div>
