--- a/frontend/Pulse/src/app/components/register/register.component.html
+++ b/frontend/Pulse/src/app/components/register/register.component.html
@@ -7,7 +7,7 @@
 
     <mat-form-field class="example-full-width">
       <mat-label>Email</mat-label>
-      <input matInput placeholder="Email" name="email" [(ngModel)]="user.email" required>
+      <input type="email" matInput placeholder="Email" name="email" [(ngModel)]="user.email" required>
     </mat-form-field>
 
     <mat-form-field class="example-full-width">
